# MovieFlix2020_E14038_Dimakakos_Panagiotis

./: .docker.env.example  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  setup.cfg
mongodb/: 00-databases.js  10-database-users.sh  20-movieflix-admin.sh  30-movies.js  40-comments.js  50-ratings.js
src/movieflix/: __init__.py  app.py  database.py  settings.py  types.py
src/movieflix/methods/: __init__.py  movies.py  users.py
src/movieflix/middleware/: __init__.py  authentication.py  authorization.py  content.py  handlers.py  http.py  logging.py  schemas.py
src/movieflix/models/: __init__.py  _base.py  comments.py  movies.py  ratings.py  users.py
src/movieflix/routes/: __init__.py  movies.py  users.py
src/movieflix/schemas/: __init__.py  movies.py  users.py
src/movieflix/utils/: crypto.py  tokens.py
