[tool.poetry]
name = "movieflix"
version = "0.1.0"
description = "Platform to search, rate and comment movies."
authors = ["Panagiotis Dimakakos <p_dimakakos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = {extras = ["dotenv"], version = "^1.1.2"}
flask-cors = "^3.0.8"
pydantic = {extras = ["email"], version = "^1.5.1"}
pymongo = "^3.10.1"
gunicorn = "^20.0.4"
bcrypt = "^3.1.7"
pyjwt = "^1.7.1"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
black = "^19.10b0"
flake8 = "^3.8.3"
mypy = "^0.780"
pre-commit = "^2.5.1"
flake8-bugbear = "^20.1.4"
flake8-comprehensions = "^3.2.3"
flake8-docstrings = "^1.5.0"

[tool.black]
line_length = 79

[tool.isort]
line_length = 79
multi_line_output = 3
default_section = "THIRDPARTY"
include_trailing_comma = "True"
reverse_relative = "True"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
